# CartER

./: .flake8  .gitignore  404.html  Handover.md  MWE_pettingzoo.py  README.md  diagram_overview  diagram_overview.drawio  index.html  mkdocs.yml  pyproject.old.toml  pyproject.toml  test.py
.github/workflows/: docs.yml
archive/: actor_critic.py  actor_critic_new.py
articles/: index.html
articles/handover_v1/: index.html
articles/introducing_carter/: index.html
building/: index.html
building/bom/: index.html
commander/: __init__.py  cli.py  constants.py  experiment.py  log.py  protocol.py  serial.py  type_aliases.py  utils.py
commander/cli/: __init__.py  experiment.py  simexp_base.py  simulate.py  tensorboard.py
commander/integration/: __init__.py  constants.py  equations.py
commander/ml/: agent.py  configurations.py  constants.py  display.py  environment.py  tensorboard.py  type_aliases.py  utils.py
commander/ml/agent/: __init__.py  agent.py  constants.py  goal.py  state_specification.py  type_aliases.py
commander/network/: __init__.py  constants.py  exceptions.py  network.py  protocol.py  selectors.py  types.py  utils.py
controller/: cartpoleml.code-workspace  platformio.ini  suppressions.txt
controller/include/: CustomArduino.h
controller/src/: BufferUtils.cpp  BufferUtils.h  Buttons.cpp  Buttons.h  CommandAndControl.cpp  CommandAndControl.h  CustomAS5600.cpp  CustomAS5600.h  CustomAccelStepper.cpp  CustomAccelStepper.h  DebugUtils.cpp  DebugUtils.h  Experiment.cpp  Experiment.h  Fixes.h  I2CMultiplexer.cpp  I2CMultiplexer.h  Init.cpp  Init.h  Joystick.cpp  Joystick.h  LimitFinding.cpp  LimitFinding.h  Limits.cpp  Limits.h  Mode.cpp  Mode.h  Packet.cpp  Packet.h  PacketReactor.cpp  PacketReactor.h  PacketSender.cpp  PacketSender.h  Protocol.cpp  Protocol.h  RotaryEncoder.cpp  RotaryEncoder.h  Steppers.cpp  Steppers.h  TimerInterrupt.cpp  (+4 more)
development/: index.html
development/cad/: index.html
development/cli/: index.html
development/diagram/: index.html
development/further_work/: index.html
development/installation/: index.html
development/protocol/: index.html
development/serial/: index.html
development/stepper/: index.html
docs/: bom.md  index.md  installation.md  protocol.md  serial.md  stepper.md
docs/articles/: handover_v1.md  index.md  introducing_carter.md  introducing_cartpoleml.md
docs/building/: bom.md  index.md
docs/development/: cad.md  cli.md  diagram.md  further_work.md  index.md  installation.md  stepper.md
docs/development/assets/: diagram_overview.drawio
docs/extra/css/: image_alignment.css
docs/usage/: index.md
docs/videos/: index.md  movements_using_ppo.md
extra/js/: mathjax_config.js
gym_ext/: __init__.py  cartpole.py  equations.py  typing.py
notebooks/: PacketTests.ipynb  RoundtripTester.ipynb  StepSkipTest.ipynb  Untitled.ipynb  Untitled1.ipynb  Utils.ipynb  numerical_int_friction.ipynb  numerical_int_frictionless.ipynb  serial_tester.ipynb  test.ipynb
schematic/: .gitignore  cartpoleml.pro  cartpoleml.sch  sym-lib-table  vendored.lib
search/: search_index.json
sketches/controller/: main.ino
sketches/include/: BufferUtils.cpp  BufferUtils.h  Buttons.cpp  Buttons.h  CommandAndControl.cpp  CommandAndControl.h  CustomAccelStepper.cpp  CustomAccelStepper.h  DebugUtils.cpp  DebugUtils.h  I2CMultiplexer.cpp  I2CMultiplexer.h  Init.cpp  Init.h  LimitFinding.cpp  LimitFinding.h  Mode.cpp  Mode.h  Networking.cpp  Networking.h  Packet.cpp  Packet.h  PacketReactor.cpp  PacketReactor.h  PacketSender.cpp  PacketSender.h  Protocol.cpp  Protocol.h  RotaryEncoder.cpp  RotaryEncoder.h  Steppers.cpp  Steppers.h  Utils.cpp  Utils.h
sketches/test/: test.ino
usage/: index.html
videos/: index.html
videos/movements_using_ppo/: index.html
