# Poetry
[tool.poetry]
name = "carter"
version = "0.1.0"
description = "Machine Learning of Inverted Pendula"
authors = ["Jeppe Klitgaard <jk782@cam.ac.uk>"]
packages = [
    { include = "commander" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
gym = {extras = ["atari"], version = "^0.18.3"}
torch = "^1.9.0"
torchvision = "^0.10.0"
torchaudio = "^0.9.0"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
Pillow = "^8.2.0"
scipy = "^1.7.0"
jupyterlab-mathjax3 = "^4.2.2"
numba = "^0.53.1"
tensorboard = "^2.5.0"
seaborn = "^0.11.1"
ffmpeg-python = "^0.2.0"
torchtyping = "^0.1.4"
pyserial = "^3.5"
click = "^8.0.1"
PettingZoo = {extras = ["butterfly"], version = "^1.11.0"}
numpy = "^1.21.1"
stable-baselines3 = {extras = ["extra"], version = "^1.1.0"}
pandas = "^1.3.1"
supersuit = {git = "https://github.com/PettingZoo-Team/SuperSuit.git"}
tqdm = "^4.62.1"
ipywidgets = "^7.6.3"
deepmerge = "^0.3.0"
mkdocs-video = "^1.1.0"
yappi = "^1.3.2"
snakeviz = "^2.1.0"

[tool.poetry.dev-dependencies]
jupytext = "^1.11.3"
black = "^21.6b0"
isort = "^5.9.1"
mypy = "^0.910"

flake8 = "^3.9.2"
line-profiler = "^3.3.0"
poethepoet = "^0.10.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.4"
typing-extensions = "^3.10.0"

[tool.poetry.scripts]
carter = "commander.cli:run"

# Mypy
[tool.mypy]
python_version = "3.9"
strict = true
show_error_codes = true

plugins = [
    "numpy.typing.mypy_plugin"
]

disallow_untyped_calls = false


[[tool.mypy.overrides]]
module = [
    "gym.*",
    "numba.*",
    "scipy.*",
    "matplotlib.*",
    "torchvision.*",
    "tensorboard.*",
    "seaborn.*",
    "serial.*",
    "supersuit.*",
    "pettingzoo.*",
    "deepmerge.*",
    "pyglet.*",
    "yappi.*",
    "mkdocs.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "nptyping.*",
    "stable_baselines3.*"
]
implicit_reexport = true

# Black
[tool.black]
line-length = 100
target-version = ["py39"]

# Isort
[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 100

known_ml = [
    "gym",
    "torch",
    "tensorflow",
    "pettingzoo",
    "supersuit",
]

known_datascience = [
    "numpy",
    "pandas",
]

known_first_party = [
    "commander",
]

sections = [
    "FUTURE",
    "STDLIB",
    "DATASCIENCE",
    "ML",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Tasks
[tool.poe.tasks]
flake8 = "flake8 ./commander"
mypy = "mypy ./commander"
black_check = "black --check ."
isort_check = "isort --check-only ."

black = "black ."
isort = "isort ."

lint = [
    "flake8",
    "black_check",
    "isort_check",
    "mypy",
]

fix = [
    "black",
    "isort",
]

# Build
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
